Change background color and weather icon depending on the weather.

--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^6.4.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-cli": "^3.17.18",
+    "expo-linear-gradient": "~8.1.0",
     "expo-location": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
-    "expo-linear-gradient": "~8.1.0"
+    "react-native-fbsdk": "^1.1.2",
+    "react-native-firebase": "^5.6.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
