Add styles of detail and subtitle.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,166 @@
 node_modules
+.expo/web/cache/development/babel-loader/0aee290bfd260fe33287e5ce75e9cf17.json
+.expo/web/cache/development/babel-loader/0b1c52ee7ce802c039d8cb8b287771de.json
+.expo/web/cache/development/babel-loader/0b8d815618dc03c0c585f2f1a9d7dad8.json
+.expo/web/cache/development/babel-loader/0bd91fddc8c4c7b7daabb69e0f0454ca.json
+.expo/web/cache/development/babel-loader/1a78de9b24686a40100ff99a70dc34f8.json
+.expo/web/cache/development/babel-loader/1ba72979c12f2e1846099fa8dd3c3998.json
+.expo/web/cache/development/babel-loader/1d3ccc1e6bcd5f446733cc332adf5d7c.json
+.expo/web/cache/development/babel-loader/1d7f4cd2ca17637039d554fa73ffee44.json
+.expo/web/cache/development/babel-loader/1e8df682d645d7201cf47cf374afdabc.json
+.expo/web/cache/development/babel-loader/01f5bf8cf678fb53e3af6c48df56d25a.json
+.expo/web/cache/development/babel-loader/2c046b79bba2610fdb4e5efca5527d2e.json
+.expo/web/cache/development/babel-loader/3e74f4f79c0d305a9e519a3750dca840.json
+.expo/web/cache/development/babel-loader/4a60d30ba9c59e54866c69a5da872212.json
+.expo/web/cache/development/babel-loader/4b8965e9de4c705dfefd99929a3d2204.json
+.expo/web/cache/development/babel-loader/4c939eb08bc1c240119c4a978c69bf89.json
+.expo/web/cache/development/babel-loader/4d0ac64e07d3965b39f0b0870beaa353.json
+.expo/web/cache/development/babel-loader/4d145cb1df8f3f096f5a0ec5b97666e1.json
+.expo/web/cache/development/babel-loader/5cbdaa297858503c3331896f8646a2b1.json
+.expo/web/cache/development/babel-loader/5d85ee24a59c3e8c333dcfa735dbf4a5.json
+.expo/web/cache/development/babel-loader/5dc40c2f30b11f0ab2e3d842a784b721.json
+.expo/web/cache/development/babel-loader/5e0d6a8dda7f130c2686530f7e9372b9.json
+.expo/web/cache/development/babel-loader/5e6176229d1eaba9d9023706f9db9eb7.json
+.expo/web/cache/development/babel-loader/5f631d6bf958628a5236dcb2ae191a23.json
+.expo/web/cache/development/babel-loader/5fc63a4b5fc301917d084647ce440fdc.json
+.expo/web/cache/development/babel-loader/6be82fcedc6e8a042d61de5cd6feea8f.json
+.expo/web/cache/development/babel-loader/7af12df0d24d16369123ccc03792fdc7.json
+.expo/web/cache/development/babel-loader/7bea2284e51053c6f7fb6eb2436c9662.json
+.expo/web/cache/development/babel-loader/7e2de637e18cfba1e0f07a3ee51200c9.json
+.expo/web/cache/development/babel-loader/7ede18d32f6bc7080d412b5d4ce17dd1.json
+.expo/web/cache/development/babel-loader/7fccf0060508c9201d168de94384ec5d.json
+.expo/web/cache/development/babel-loader/8ad2e4ee06f7a6e3ef9a58c8e9f91844.json
+.expo/web/cache/development/babel-loader/8bd7857d5b99e401f467e72a1198c199.json
+.expo/web/cache/development/babel-loader/8c4f1b8a4d947469c4cab2b02cd2802c.json
+.expo/web/cache/development/babel-loader/8d8b3cea29ef56a5d3204d65fc77eec4.json
+.expo/web/cache/development/babel-loader/8d4556f6bf475a52aedd8553c28757f6.json
+.expo/web/cache/development/babel-loader/8df6d8346c2817af815675a7d907c880.json
+.expo/web/cache/development/babel-loader/8e946b1cd8395325bee4b52c0c7537cc.json
+.expo/web/cache/development/babel-loader/8f90c3b345f8208d4b1da698adb16990.json
+.expo/web/cache/development/babel-loader/9afd1234527c1486953371d3caa33aff.json
+.expo/web/cache/development/babel-loader/9c4f2f1444bb35b757556a7593ec9cad.json
+.expo/web/cache/development/babel-loader/9c602011042354edb3e24b927b3cd9d6.json
+.expo/web/cache/development/babel-loader/09f37e888946e58eeaefddb6ad81227b.json
+.expo/web/cache/development/babel-loader/9f1429325e8a1ff9273437c27d0ee6a2.json
+.expo/web/cache/development/babel-loader/12df515f70ef378c018cf3e5e9082e2f.json
+.expo/web/cache/development/babel-loader/13c0c457ea8a0f2409950324ca706f57.json
+.expo/web/cache/development/babel-loader/14af844b2972ad852118925b5aa25a89.json
+.expo/web/cache/development/babel-loader/23b89626dd2fa499cce5c74621d31a66.json
+.expo/web/cache/development/babel-loader/26cd9235ecba94c9837074d2f6a4052f.json
+.expo/web/cache/development/babel-loader/34abb247e8007a05805e7a1cd39d6dd8.json
+.expo/web/cache/development/babel-loader/55d3350c503d893160e28b4292dd8a66.json
+.expo/web/cache/development/babel-loader/58db8d97df93995536645e44daad1f3c.json
+.expo/web/cache/development/babel-loader/63be00d9e195a13f5849e40cb4593954.json
+.expo/web/cache/development/babel-loader/65e0a87ba73e3eaab2200864f018a380.json
+.expo/web/cache/development/babel-loader/66af5a142955aa0050225a5a722e8b59.json
+.expo/web/cache/development/babel-loader/68da59df1aa3044eb7b780dd361ad3f4.json
+.expo/web/cache/development/babel-loader/81b7bd5571877e3f00e7b6e0e6b7effc.json
+.expo/web/cache/development/babel-loader/83f4351b04a4c6c6017085f8d0d4861e.json
+.expo/web/cache/development/babel-loader/89d2cb615f049d1d1aafed6d743239ac.json
+.expo/web/cache/development/babel-loader/95c1be4d4f862c76d8016e634a3c710c.json
+.expo/web/cache/development/babel-loader/97c3a581fd814446c77e71f95dcdc2c4.json
+.expo/web/cache/development/babel-loader/97eb19e3749dc7c3386ba4d4c1ec86b3.json
+.expo/web/cache/development/babel-loader/099e0866a6fb6b1663d3603e792f9c17.json
+.expo/web/cache/development/babel-loader/113adc3cfe3a8eb104cc4536ac645f5f.json
+.expo/web/cache/development/babel-loader/196b48e00c7d9709924529b90bbb0488.json
+.expo/web/cache/development/babel-loader/317a929d0137d136ccade6a37ba5fd97.json
+.expo/web/cache/development/babel-loader/318e10af3a36ad884f60b0ac21a7e1b3.json
+.expo/web/cache/development/babel-loader/348c2ee3c7844aa55a1ae779fa01c957.json
+.expo/web/cache/development/babel-loader/378d3daf6b947d00187cc0b24d8eea49.json
+.expo/web/cache/development/babel-loader/418bc02e9493eae11ad3e724210dc279.json
+.expo/web/cache/development/babel-loader/0580f7843ffeb601f452fd863a1f9108.json
+.expo/web/cache/development/babel-loader/582ff18af9fde13251289df54b077750.json
+.expo/web/cache/development/babel-loader/630f84c180b4b674a1d0e709b6b23ddb.json
+.expo/web/cache/development/babel-loader/749f08009ea4c31a368a2e00299eea12.json
+.expo/web/cache/development/babel-loader/771f647ed4630e3f99eca8bcfa2a929d.json
+.expo/web/cache/development/babel-loader/782eb83aa4f1176cea57cb89909d929e.json
+.expo/web/cache/development/babel-loader/850ceba15f18c74ca49750a8ff3c4e75.json
+.expo/web/cache/development/babel-loader/926afd0aa2e04c5883714589763fe2fb.json
+.expo/web/cache/development/babel-loader/926b510e2c56a0f4a319b7cc026bc3cf.json
+.expo/web/cache/development/babel-loader/00957aab46f5258292508c428333dd82.json
+.expo/web/cache/development/babel-loader/962c6ae2b1db1131891e7db8a37204c1.json
+.expo/web/cache/development/babel-loader/974c7be3b617fd8e470d1b7f91428cc8.json
+.expo/web/cache/development/babel-loader/1041b5f127f28d6593061ab71abb37f2.json
+.expo/web/cache/development/babel-loader/2094e6081b96ded823b6fca3e6e0dc3d.json
+.expo/web/cache/development/babel-loader/2254e7001df2aead3043cda3e50987e3.json
+.expo/web/cache/development/babel-loader/3675b229f56e99a68edafb4777a4ab57.json
+.expo/web/cache/development/babel-loader/6523a01b15b638a025f019b29714ca15.json
+.expo/web/cache/development/babel-loader/7098b3d0e17bec315b305da45286f0ee.json
+.expo/web/cache/development/babel-loader/7362bfa14bbe8e565a318a88ce111c25.json
+.expo/web/cache/development/babel-loader/8175fa2fe147b88ac2faf8a7d6fcf186.json
+.expo/web/cache/development/babel-loader/8609b111de516d2c70d1fde6c5d8e45b.json
+.expo/web/cache/development/babel-loader/13805df256db319a43595280ed2390e6.json
+.expo/web/cache/development/babel-loader/35896a91493226777654d629c115afe3.json
+.expo/web/cache/development/babel-loader/43176dae675b709d77c60d3b60e8eea6.json
+.expo/web/cache/development/babel-loader/82914f4d9d8a9651c744856ae9a84c28.json
+.expo/web/cache/development/babel-loader/114960eba912ffd7505bd3fa7ae8fd9f.json
+.expo/web/cache/development/babel-loader/227377a34485183d3655be20c5a8f2eb.json
+.expo/web/cache/development/babel-loader/615160d8175ac886d537dfee7ac9b905.json
+.expo/web/cache/development/babel-loader/666484daf6093cb3e4f39524ae91d514.json
+.expo/web/cache/development/babel-loader/813020ed91180e8cc930baafa95b70cf.json
+.expo/web/cache/development/babel-loader/818503a2ae7b9b06d82968a42a7f5f06.json
+.expo/web/cache/development/babel-loader/6750164b9ee6c4d297167ef9a4d0dba5.json
+.expo/web/cache/development/babel-loader/9278551c93174ad0ec89af8d7a34500b.json
+.expo/web/cache/development/babel-loader/15548190bee6585a3911d003ff4a0234.json
+.expo/web/cache/development/babel-loader/34491308e1b17c8b58f3802199e0efe5.json
+.expo/web/cache/development/babel-loader/4139567018c0870876b32327c7946eba.json
+.expo/web/cache/development/babel-loader/5090944950ef2ee40d96e88e34e0bdfd.json
+.expo/web/cache/development/babel-loader/9954027135765b002d6cb800324f8b41.json
+.expo/web/cache/development/babel-loader/20206442299243aa5d111955cc6499d7.json
+.expo/web/cache/development/babel-loader/a14f1b75dd1e16da8cb748d64d42c191.json
+.expo/web/cache/development/babel-loader/a35d36e3de43c74ce7690fa5645e9eed.json
+.expo/web/cache/development/babel-loader/a1917c7c86224d15e930b70fe93bb841.json
+.expo/web/cache/development/babel-loader/a5446ccfa6327339d31b1c3d1104005a.json
+.expo/web/cache/development/babel-loader/a34250b158bdc85ddedf8f534f7bbae1.json
+.expo/web/cache/development/babel-loader/a0959821d53681ef3e0484263b3cb3b0.json
+.expo/web/cache/development/babel-loader/aa7890161808cd05a2f031834cb0ce46.json
+.expo/web/cache/development/babel-loader/ab4aa132867e1b9fb08814e6d94c4e20.json
+.expo/web/cache/development/babel-loader/abfe9fe55ac2205d5cb0ddbcf33bbfb0.json
+.expo/web/cache/development/babel-loader/ac844212c40f3be429be49da933eb6ab.json
+.expo/web/cache/development/babel-loader/acaf6f6137c46c1e6bda17885f23f678.json
+.expo/web/cache/development/babel-loader/aeca623d0a6151d1d8febe4dddc78707.json
+.expo/web/cache/development/babel-loader/b5a7058b71a29869f54444a9395908dc.json
+.expo/web/cache/development/babel-loader/b5ab7dc5b32af7502c734dc528903258.json
+.expo/web/cache/development/babel-loader/b32a6ef05c955e93a3dec32124279eaa.json
+.expo/web/cache/development/babel-loader/b38ed4d106bee6ba0f5b2fe6e645013f.json
+.expo/web/cache/development/babel-loader/b634730ef15ef178e1c6a280b23c6a47.json
+.expo/web/cache/development/babel-loader/bebbfd8c9d4f4ece8ca9796c75b9bf88.json
+.expo/web/cache/development/babel-loader/bf7ceec6274615e02af6d73c5a0a2361.json
+.expo/web/cache/development/babel-loader/c1ca83e6daf2656168be10e1ec67fb7c.json
+.expo/web/cache/development/babel-loader/c03a71f6b5342177b4700d83e50ca4e6.json
+.expo/web/cache/development/babel-loader/c475aea594ba53eb9915b25bdd2c13fb.json
+.expo/web/cache/development/babel-loader/c7165c5cbef199de79ff529ec3b59c86.json
+.expo/web/cache/development/babel-loader/c14384c4d164c3bc2dfe481eba910d0e.json
+.expo/web/cache/development/babel-loader/c8784126fa2924a58a28a8f132b2c360.json
+.expo/web/cache/development/babel-loader/ca9d98d62572087313349107ce6de817.json
+.expo/web/cache/development/babel-loader/d4a6a81b531fa4b085cbcc8f581d59d3.json
+.expo/web/cache/development/babel-loader/d9ffa1b9be471a617263e72f395d09c4.json
+.expo/web/cache/development/babel-loader/d528c19dca3abe04096320a5577b076d.json
+.expo/web/cache/development/babel-loader/da3a882d0ac065a5221d4073350133d9.json
+.expo/web/cache/development/babel-loader/da069d71d7d3df6e71f814ea76d00f92.json
+.expo/web/cache/development/babel-loader/db7901dbd041445109898cb2a39de2a7.json
+.expo/web/cache/development/babel-loader/dc97e48e162105325e7123d7d2da96ce.json
+.expo/web/cache/development/babel-loader/dc99de0b837a5ed38cc1aa9e12b3e764.json
+.expo/web/cache/development/babel-loader/dd341d004e7c4bcafc606ac8a21cdf0e.json
+.expo/web/cache/development/babel-loader/dd787a18976b1c0da7284a2e612461df.json
+.expo/web/cache/development/babel-loader/dd5031461a5d4c14a31195edf2a6114d.json
+.expo/web/cache/development/babel-loader/e6f7867389cfd5bb97a368ad2f2b164a.json
+.expo/web/cache/development/babel-loader/e7a37a65c24ff68d552e12ab3473087f.json
+.expo/web/cache/development/babel-loader/e311a3259398e319624c42a00d7b6989.json
+.expo/web/cache/development/babel-loader/e1886ea8578f27fa0b696230a823c580.json
+.expo/web/cache/development/babel-loader/eb2a46e21f71b188d35a31ead431b7c9.json
+.expo/web/cache/development/babel-loader/ed9d5edfc10c63f99f79c615286dd41d.json
+.expo/web/cache/development/babel-loader/ef55bd4f45cde08834ee720e79d74895.json
+.expo/web/cache/development/babel-loader/f0a7927276f8eddc81b037f3e14964eb.json
+.expo/web/cache/development/babel-loader/f2d0677ce64f7939eb6fb65d136d2795.json
+.expo/web/cache/development/babel-loader/f8e6b417b0f3ddd393dbf21a05d38ec3.json
+.expo/web/cache/development/babel-loader/f26b774bc13bcb3d04231caf41c258f0.json
+.expo/web/cache/development/babel-loader/f71a83be852f89fa490578c91e920277.json
+.expo/web/cache/development/babel-loader/f135a09654053ca9f27753feb156cfff.json
+.expo/web/cache/development/babel-loader/f365e180f63110eaacea755422030372.json
+.expo/web/cache/development/babel-loader/f8739e838cc4a19aa71a777508f1b5ab.json
+.expo/web/cache/development/babel-loader/f239073adadf16b0e9a1678a3e39eaa6.json
+.expo/web/cache/development/babel-loader/f232908793aca44ba2f20a485be69523.json
+.expo/web/cache/development/babel-loader/f35288250728173e5a38e7ebd69e746d.json
+.expo/web/cache/development/babel-loader/fabb4688ce8292b7697c371de2d80705.json
+.expo/web/cache/development/babel-loader/fb91dd3b6a44acfe0c849dc73d4b10ed.json
