--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
+    "react-native-spinkit": "^1.5.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
